--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,14 @@ attemptOnehot.py
 callGraph_attempt.py
 hyperopt_playground.py
 
+#Ignore anything in results dir, except a dummy to keep the dir itself tracked
+lit_data_expts/waygal/results/*
+!lit_data_expts/waygal/results/EEGOnly/*
+lit_data_expts/waygal/results/EEGOnly/LOO/*
+!lit_data_expts/waygal/results/EEGOnly/LOO/dummy.txt
+lit_data_expts/waygal/results/EEGOnly/WithinPpt/*
+!lit_data_expts/waygal/results/EEGOnly/WithinPpt/dummy.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
