Gitignoring results directory

--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,26 @@ attemptOnehot.py
 callGraph_attempt.py
 hyperopt_playground.py
 
-#Ignore anything in results dir, except a dummy to keep the dir itself tracked
+#Ignore anything in WAYGAL results dir, except a dummy to keep the dir itself tracked
 lit_data_expts/waygal/results/*
 !lit_data_expts/waygal/results/EEGOnly/
 lit_data_expts/waygal/results/EEGOnly/LOO/*
 !lit_data_expts/waygal/results/EEGOnly/LOO/dummy.txt
 lit_data_expts/waygal/results/EEGOnly/WithinPpt/*
 !lit_data_expts/waygal/results/EEGOnly/WithinPpt/dummy.txt
+
+#Ignore anything in Jeong and Jeong CSP results dir, except a dummy to keep the dir itself tracked
+lit_data_expts/jeong/results/*
+!lit_data_expts/jeong/results/EEGOnly/
+lit_data_expts/jeong/results/EEGOnly/LOO/*
+!lit_data_expts/jeong/results/EEGOnly/LOO/dummy.txt
+lit_data_expts/jeong/results/EEGOnly/WithinPpt/*
+!lit_data_expts/jeong/results/EEGOnly/WithinPpt/dummy.txt
+!lit_data_expts/jeong/results/EEGCSP/
+lit_data_expts/jeong/results/EEGCSP/LOO/*
+!lit_data_expts/jeong/results/EEGCSP/LOO/dummy.txt
+lit_data_expts/jeong/results/EEGCSP/WithinPpt/*
+!lit_data_expts/jeong/results/EEGCSP/WithinPpt/dummy.txt
 
 #Ignore datasets
 lit_data_expts/waygal/datasets/*
