Cleanup of unstaged miscellany
Deprecated attempt to convert systems to sklearn-compatible classes. Script used to trial loglog plotting (considered for hyperparam correlations but ultimately unused). Gitignoring ipython log.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ attemptOnehot.py
 callGraph_attempt.py
 hyperopt_playground.py
 
+#Ignore ipython log
+ipython_history.md
+
 #Ignore anything in WAYGAL results dir, except a dummy to keep the dir itself tracked
 lit_data_expts/waygal/results/*
 !lit_data_expts/waygal/results/EEGOnly/
